--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.13.2",
-    "webpack": "^1npm.13.3",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
